--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <style>
-      h1   {color:purple;}
-      body {background-color:lavender;border-style: groove;}
+      @font-face {font-family: spectral;src: url(Spectral-Regular.ttf);}
+      h1   {color:coral;}
+      body {background-color:lavender;border-style: groove;font-family: spectral;}
       p    {color:black;}
       </style>
 
@@ -16,11 +17,12 @@
   
   </head>
   <body>
-    <li><font face ="Spectral"><a href="about.html">All About Me</a></font></li>
-    <li><font face = "Spectral"><a href="travels.html">Travel</href></font></li>
-    <li><font face = "Spectral"><a href="recipeoftheday.html">Recipe of the Day</a></font></li>
-    <li><font face = "Spectral"><a href="podcast.html">Must Listen</a></font></li>
-    <li><font face = "Spectral"><a href="watching.html">What To Watch</a></font></li>
+    <li><a href="about.html">All About Me</a></li>
+    <li><a href="travels.html">Travel</href></li>
+    <li><a href="recipeoftheday.html">Recipe of the Day</a></li>
+    <li><a href="podcast.html">Must Listen</a></li>
+    <li><a href="watching.html">What To Watch</a></li>
+
   </body>
 
 
