--- a/podcast.html
+++ b/podcast.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+        h1   {color:coral;}
+        body {background-color:lavender;border-style: groove;}
+        p    {color:black;}
+        </style>
+    
     <meta charset="utf-8">
     <title>My Site | A website by me</title>
   </head>
