--- a/recipeoftheday.html
+++ b/recipeoftheday.html
@@ -1,12 +1,61 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+      @font-face {font-family: karla;src: url(Karla-VariableFont_wght.ttf);}
+      h1   {color:coral;}
+      body {background-color:lavender;border-style: groove;font-family:karla}
+      p    {color:black;}
+      
+
+div {
+  font-family: myFirstFont;
+}
+      </style>
     <meta charset="utf-8">
     <title>My Site | A website by me</title>
   </head>
   <body>
     <h1><center><font face ="Spectral">Recipe of the Day</font></center></h1>
+    <h2><center><font face ="Spectral">Malva Pudding</font></center></h2>
+    <h3><center><font face ="Spectral">South African Baked Dessert</font></center></h3>
 
-    <p>My favourite .....
+    <p><center><img src="malva.jpeg" width="562" height="316" ></center></p>
+    <section>
+      <h4>Ingredients</h4>
+      <ul style="list-style-type:circle">
+        <li>3/4 cup sugar</li>
+        <li>2 large eggs</li>
+        <li>150g all-purpose flour</li>
+        <li>1 teaspoon baking salt</li>
+        <li>1/2 teaspoon salt</li>
+        <li>1 tablespoon butter (a generous tablespoon)</li>
+        <li>1 teaspoon vinegar</li>
+        <li>1/3 cup milk</li>
+      </ul>
+      <h4>For The Sauce</h4>
+      <ul style="list-style-type:circle">
+        <li>3/4 cup fresh cream</li>
+        <li>100g butter</li>
+        <li>90-150g sugar</li>
+        <li>1/3 cup hot water</li>
+        <li>2 teaspoons vanilla essence</li>
+      </ul>
+      <h4>Directions</h4>
+      <ul style="list-style-type:circle">
+        <p>Preheat oven to 350 deg F/180 deg Celsius.</p>
+        <p>Grease an oven dish.</p>
+        <p>Beat or whip the sugar and eggs. It's quickest in a food processor, or use electric beaters. Beat until thick and lemon coloured, then add the apricot jam and mix through.</p>
+        <p>Melt the butter and add the butter and vinegar to the wet mixture.</p>
+        <p>Sieve, or simply mix together: the flour, soda and salt.</p>
+        <p>Add this mixture with the milk to the egg mixture in the processor or mixing bowl. Beat well.</p>
+        <p>Pour into an oven-proof dish and bake until pudding is brown and well-risen - depending on your oven and oven dish this will be between 30-45 minutes.</p>
+        <p>In a pot, melt together the ingredients for the sauce and stir well.</p>
+        <p>Pour it over the pudding as soon as it comes out of the oven.</p>
+        <p>Leave to stand awhile before serving. Serve warm with vanilla ice cream.</p>
+
+        <!--recipe taken from: https://www.food.com/recipe/malva-pudding-south-african-baked-dessert-118545-->
+      </ul>
+    </section>
   </body>
 </html>
