--- a/travels.html
+++ b/travels.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+      @font-face {font-family: spectral;src: url(Spectral-Regular.ttf);}
+      h1   {color:coral;}
+      h2{font-family:spectral;}
+      body {background-color:lavender;border-style: groove;}
+      p    {color:black;}
+      </style>
+    
     <meta charset="utf-8">
     <title>My Site | A website by me</title>
   </head>
   <body>
-    <h1><center><font face ="Spectral">Favourite Spots</font></center></h1>
+    <h1><center><font face ="Spectral">Travel Highlight</font></center></h1>
+    <h2>Salt Lake City, Utah</h2>
 
-    <p>Singapore</p>
+    <p></p>
     <p>London</p>
     <p>Mexico</p>
     <p>France</p>
