--- a/watching.html
+++ b/watching.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+        h1   {color:coral;}
+        body {background-color:lavender;border-style: groove;}
+        p    {color:black;}
+        </style>
     <meta charset="utf-8">
     <title>My Site | A website by me</title>
   </head>
   <body>
     <h1><center><font face ="Spectral">What Am I Watching</font></center></h1>
 
-    <p><center><font face ="Spectral"><a href="https://www.pushkin.fm/show/revisionist-history/">The Circle</a></font></center></p>
-    <p><center><img src="gladwell.jpeg" width="200" height="200" ></center></p>
-    <p><center><font face ="Spectral"><a href="https://podcasts.apple.com/us/podcast/the-viall-files/id1448210981">Falcon and the Winter Soldier</a></font></center></p>
-    <p><center><img src="viall.jpeg" width="200" height="200" ></center></p>
+    <p><center><font face ="Spectral"><a href="https://www.netflix.com/title/81044551">The Circle</a></font></center></p>
+    <p><center><img src="circle.png" width="210" height="120" ></center></p>
+    <p><center><font face ="Spectral"><a href="https://www.disneyplus.com/series/the-falcon-and-the-winter-soldier/4gglDBMx8icA">Falcon and the Winter Soldier</a></font></center></p>
+    <p><center><img src="falcon.jpg" width="211" height="312.5" ></center></p>
     <p><center><font face ="Spectral"><a href="https://www.nbc.com/the-voice">The Voice</a></font></center></p>
-    <p><center><img src="99pi.svg.png" width="200" height="200" ></center></p>
+    <p><center><img src="thevoice.jpeg" width="248" height="151" ></center></p>
   </body>
 </html>
