--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   
   </head>
   <body>
-    <li><a href="about.html">All About Me</a></li>
-    <li><a href="travels.html">Travel</href></li>
-    <li><a href="recipeoftheday.html">Recipe of the Day</a></li>
-    <li><a href="podcast.html">Must Listen</a></li>
-    <li><a href="watching.html">What To Watch</a></li>
+    <li><a href="about.html">All About Me &#128149;</a></li>
+    <li><a href="travels.html">Travel &#128747;</href></li>
+    <li><a href="recipeoftheday.html">Recipe of the Day  &#127869;</a></li>
+    <li><a href="podcast.html">Must Listen &#127911;</a></li>
+    <li><a href="watching.html">What To Watch &#127909;</a></li>
 
   </body>
 
