--- a/about.html
+++ b/about.html
@@ -2,17 +2,29 @@
 <html>
   <head>
     <style>
-      h1   {color:purple;}
-      body {background-color:lavender;border-style: groove;}
-      p    {color:black;}
+      @font-face {font-family: karla;src: url(Karla-VariableFont_wght.ttf);}
+      h1   {color:coral;}
+      h3   {font-family: karla;}
+      body {background-color:lavender;border-style: groove;font-family: karla;}
+      p    {color:black;font-family:karla;}
       </style>
-      
+
     <meta charset="utf-8">
     <title>My Site | A website by me</title>
   </head>
   <body>
     <h1><center><font face ="Spectral">Who Am I?</font></center></h1>
 
-    <p><center>I was born in Beijing but raised in Johannesburg, South Africa.</center> </p>
+    <h3><center>China born, South African raised</center> </h3>
+    <h3><center>Dog lover 	&#9830; Foodie 	&#9830; Travel junkie</center> </h3>
+    <h3><center>NYU'17</center> </h3>
+    <h3><center>MSB'22</center> </h3>
+    <h4><center><i>And I have a guinea pig named Felix</i></center></h4>
+
+    <center><video width="320" height="240" controls>
+      <source src="IMG_6811.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video></center>
+
   </body>
 </html>
