--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     <h3><center>Dog lover 	&#9830; Foodie 	&#9830; Travel junkie</center> </h3>
     <h3><center>NYU'17</center> </h3>
     <h3><center>MSB'22</center> </h3>
-    <h4><center><i>And I have a guinea pig named Felix</i></center></h4>
+    <p><center><i>And I have a guinea pig named Felix</i></center></p>
 
     <center><video width="320" height="240" controls>
       <source src="IMG_6811.mp4" type="video/mp4">
