--- a/recipeoftheday.html
+++ b/recipeoftheday.html
@@ -4,6 +4,7 @@
     <style>
       @font-face {font-family: karla;src: url(Karla-VariableFont_wght.ttf);}
       h1   {color:coral;}
+      h4  {color:steelblue}
       body {background-color:lavender;border-style: groove;font-family:karla}
       p    {color:black;}
       
