--- a/travels.html
+++ b/travels.html
@@ -39,7 +39,7 @@ img {
 @font-face {font-family: karla;src: url(Karla-VariableFont_wght.ttf);}
       h1   {color:coral;}
       h2 {font-family:spectral;}
-      h3  {font-family:spectral;}
+      h3  {font-family:spectral;color:steelblue}
       body {background-color:lavender;border-style: groove;}
       p    {color:black;font-family: karla;}
    
