--- a/about.html
+++ b/about.html
@@ -22,9 +22,7 @@
     <p><center><i>And I have a guinea pig named Felix</i></center></p>
 
     <center><video width="320" height="240" controls>
-      <source src="IMG_6811.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-    </video></center>
+      <source src="IMG_6811.mp4" type="video/mp4"></video></center>
 
   </body>
 </html>
