--- a/about.html
+++ b/about.html
@@ -10,11 +10,11 @@
       </style>
 
     <meta charset="utf-8">
-    <title>My Site | A website by me</title>
   </head>
   <body>
+    <button onclick="goBack()">Back</button>
+    <script>function goBack() {window.history.back();}</script>
     <h1><center><font face ="Spectral">Who Am I?</font></center></h1>
-
     <h3><center>China born, South African raised</center> </h3>
     <h3><center>Dog lover 	&#9830; Foodie 	&#9830; Travel junkie</center> </h3>
     <h3><center>NYU'17</center> </h3>
