--- a/index.html
+++ b/index.html
@@ -9,25 +9,28 @@
       </style>
 
     <meta charset="utf-8">
-    <title>My Site | A website by me</title>
+    <nav>
+
+      <a href="about.html">All About Me &#128149;</a> |
+      <a href="travels.html">Travel &#128747;</href> |
+      <a href="recipeoftheday.html">Recipe of the Day  &#127869;</a> |
+      <a href="podcast.html">Must Listen &#127911;</a> |
+      <a href="watching.html">What To Watch &#127909;</a> |
+    </nav>
+  </head>
+
+  <body>
     <h1><center><font face ="Spectral">Sherry's Personal Blog</font></center></h1>
     <h4><i><center><font face ="Spectral">"a macaron is just an oreo that studied abroad"</font></center></i></h4>
     <marquee>Life is like a camera. Focus on what is important. Capture the good times. Develop from the negatives. And if things don't work out, Take Another Shot</marquee> <!--Idea from: https://www.makeuseof.com/tag/7-cool-html-effects-that-anyone-can-add-to-their-website-nb/-->
     <center><img src="IMG_6311.JPG" width="408" height="544"></center>
-  
-  </head>
-  <body>
-    <li><a href="about.html">All About Me &#128149;</a></li>
-    <li><a href="travels.html">Travel &#128747;</href></li>
-    <li><a href="recipeoftheday.html">Recipe of the Day  &#127869;</a></li>
-    <li><a href="podcast.html">Must Listen &#127911;</a></li>
-    <li><a href="watching.html">What To Watch &#127909;</a></li>
-
   </body>
-
 
   <footer>
     <p>&copy; 2021 Sherry Jiang 
   </p>
   </footer>
 </html>
+
+
+<!--Back button source: https://www.w3schools.com/jsref/met_his_back.asp-->
