--- a/recipeoftheday.html
+++ b/recipeoftheday.html
@@ -14,9 +14,10 @@ div {
 }
       </style>
     <meta charset="utf-8">
-    <title>My Site | A website by me</title>
   </head>
   <body>
+    <button onclick="goBack()">Back</button>
+    <script>function goBack() {window.history.back();}</script>
     <h1><center><font face ="Spectral">Recipe of the Day</font></center></h1>
     <h2><center><font face ="Spectral">Malva Pudding</font></center></h2>
     <h3><center><font face ="Spectral">South African Baked Dessert</font></center></h3>
