--- a/travels.html
+++ b/travels.html
@@ -46,9 +46,10 @@ img {
       
 </style>
 </head>
+
 <body>
-</head>
-<body>
+  <button onclick="goBack()">Back</button>
+  <script>function goBack() {window.history.back();}</script>
   <h1><center><font face ="Spectral">Travel Highlight of the Month</font></center></h1>
   <h2><center>Salt Lake City, Utah</center></h2>
 
