--- a/watching.html
+++ b/watching.html
@@ -5,11 +5,12 @@
         @font-face {font-family: spectral;src: url(Spectral-Regular.ttf);}
         @font-face {font-family: karla;src: url(Karla-VariableFont_wght.ttf);}
         h1   {color:coral;}
-        body {background-color:lavender;border-style: groove;font-family:karla; padding:70px}
+        body {background-color:lavender;border-style: groove;font-family:karla}
         p    {color:black;}
         </style>
     <meta charset="utf-8">
-    <title>My Site | A website by me</title>
+    <button onclick="goBack()">Back</button>
+    <script>function goBack() {window.history.back();}</script>
   </head>
   <body>
     <h1><center><font face ="Spectral">What Am I Watching</font></center></h1>
