--- a/watching.html
+++ b/watching.html
@@ -17,15 +17,15 @@
 
     <p><center><font face ="Spectral"><a href="https://www.netflix.com/title/81044551">The Circle</a></font></center></p>
     <p><center><img src="circle.png" width="210" height="120" ></center></p>
-    <p>The Circle is about the power of social media: It can create influencers and destroy someone's reputation. Each contestant is set up in their own apartment where they can only communicate with one another through the show's social media platform and chats</p>
+    <p style ="padding: 70px">The Circle is about the power of social media: It can create influencers and destroy someone's reputation. Each contestant is set up in their own apartment where they can only communicate with one another through the show's social media platform and chats</p>
     <!--source: https://www.cinemablend.com/television/2487560/what-is-the-circle-what-to-know-about-netflixs-reality-show-->
     <p><center><font face ="Spectral"><a href="https://www.disneyplus.com/series/the-falcon-and-the-winter-soldier/4gglDBMx8icA">Falcon and the Winter Soldier</a></font></center></p>
     <p><center><img src="falcon.jpg" width="211" height="312.5" ></center></p>
-    <p>Following the events of “Avengers: Endgame,” Sam Wilson/Falcon (Anthony Mackie) and Bucky Barnes/Winter Soldier (Sebastian Stan) team up in a global adventure that tests their abilities—and their patience—in Marvel Studios’ “The Falcon and The Winter Soldier.” The all-new series is directed by Kari Skogland; Malcolm Spellman is the head writer. Streaming exclusively on Disney+.</p>
+    <p style ="padding: 70px">Following the events of “Avengers: Endgame,” Sam Wilson/Falcon (Anthony Mackie) and Bucky Barnes/Winter Soldier (Sebastian Stan) team up in a global adventure that tests their abilities—and their patience—in Marvel Studios’ “The Falcon and The Winter Soldier.” The all-new series is directed by Kari Skogland; Malcolm Spellman is the head writer. Streaming exclusively on Disney+.</p>
     <!--source: https://www.marvel.com/tv-shows/the-falcon-and-the-winter-soldier/1-->
     <p><center><font face ="Spectral"><a href="https://www.nbc.com/the-voice">The Voice</a></font></center></p>
     <p><center><img src="thevoice.jpeg" width="248" height="151" ></center></p>
-    <p>Four famous musicians search for the best voices in America and will mentor these singers to become artists. America will decide which singer will be worthy of the grand prize.</p>
+    <p style ="padding: 70px">Four famous musicians search for the best voices in America and will mentor these singers to become artists. America will decide which singer will be worthy of the grand prize.</p>
     <!--source: https://www.imdb.com/title/tt1839337/plotsummary-->
   </body>
 </html>
