--- a/podcast.html
+++ b/podcast.html
@@ -19,13 +19,13 @@
 
     <p><center><font face ="Spectral"><a href="https://www.pushkin.fm/show/revisionist-history/">Revisionist History</a></font></center></p>
     <p><center><img src="gladwell.jpeg" width="200" height="200" ></center></p>
-    <p>Revisionist History is Malcolm Gladwell’s journey through the overlooked and the misunderstood. Every episode re-examines something from the past — an event, a person, an idea, even a song — and asks whether we got it right the first time. Because sometimes the past deserves a second chance.</p>
+    <p style ="padding: 70px"> Revisionist History is Malcolm Gladwell’s journey through the overlooked and the misunderstood. Every episode re-examines something from the past — an event, a person, an idea, even a song — and asks whether we got it right the first time. Because sometimes the past deserves a second chance.</p>
     <p><center><font face ="Spectral"><a href="https://podcasts.apple.com/us/podcast/the-viall-files/id1448210981">Viall Files</a></font></center></p>
     <p><center><img src="viall.jpeg" width="200" height="200" ></center></p>
-    <p>Welcome to The Viall Files, the podcast that talks about relationships. Nick has a lot of dating experience (on TV as The Bachelor and off), so he likes to think he knows what he's talking about. On Mondays, listeners call in for a live version of the popular Instagram series "Questions with Nick." On Wednesdays, Nick sits down with an inspiring guest who challenges the way he looks at the world. We love to laugh, be silly, and get deep! We hope you subscribe and join The Viall Files Family.</p>
+    <p style ="padding: 70px">Welcome to The Viall Files, the podcast that talks about relationships. Nick has a lot of dating experience (on TV as The Bachelor and off), so he likes to think he knows what he's talking about. On Mondays, listeners call in for a live version of the popular Instagram series "Questions with Nick." On Wednesdays, Nick sits down with an inspiring guest who challenges the way he looks at the world. We love to laugh, be silly, and get deep! We hope you subscribe and join The Viall Files Family.</p>
     <p><center><font face ="Spectral"><a href="https://99percentinvisible.org/">99% Invisible</a></font></center></p>
     <p><center><img src="99pi.svg.png" width="200" height="200" ></center></p>
-    <p>99% Invisible is a sound rich, narrative podcast hosted by Roman Mars about all the thought that goes into the things we don’t think about — the unnoticed architecture and design that shape our world. </p>
+    <p style ="padding: 70px">99% Invisible is a sound rich, narrative podcast hosted by Roman Mars about all the thought that goes into the things we don’t think about — the unnoticed architecture and design that shape our world. </p>
     <!--source:https://99percentinvisible.org/about/the-show/-->
 
   </body>
