--- a/travels.html
+++ b/travels.html
@@ -16,12 +16,10 @@ html, body {
 }
 
 img {
-    padding: 0;
-    display: block;
-    margin: 0 auto;
-    max-height: 100%;
-    max-width: 100%;
+    width: 100%;
+    height: auto;
 }
+
 .column {
   float: left;
   width: 33.33%;
